# wgpu_study

./: .gitignore  Cargo.toml
rootdir/: Cargo.toml
rootdir/src/: main.rs
tutorial1_window/: Cargo.toml
tutorial1_window/src/: lib.rs
tutorial2-surface/: Cargo.toml
tutorial2-surface/src/: lib.rs
tutorial3_pipeline/: Cargo.toml
tutorial3_pipeline_challenge/: Cargo.toml
tutorial3_pipeline_challenge/src/: challenge.wgsl  lib.rs
widgets/: Cargo.toml
widgets/src/: lib.rs
